Fixed spacing issue with widgets

--- a/css/antd/cards.scss
+++ b/css/antd/cards.scss
@@ -54,10 +54,14 @@
     }
 
     div.ant-card-body {
-        padding: 0;
+        padding: 0 0 12px 0;
 
         div.spaced {
             padding: 0 24px;
+            
+            p {
+                margin: 0;
+            }
         }
     }
 }
